Made our TODO accurate

--- a/lib/index.jade
+++ b/lib/index.jade
@@ -62,7 +62,7 @@ html
                     'data-action': 'accept',
                     // TODO: Make our button disabled and only enable when an overlay is drawn
                     // TODO: When changes are accepted, reset all affected overlays and buttons
-                    disabled: 'disabled'
+                    // disabled: 'disabled'
                   }, 'Find similar images with selection'),
                 ]),
 
