Updated dev notes

--- a/lib/index.jade
+++ b/lib/index.jade
@@ -104,7 +104,7 @@ html
                         style: 'width: 100%'
                       })
                     ]),
-                    //- DEV: We use `width: 33%` to guarantee no widths change when we use a loading spinner
+                    //- DEV: We use `width: 33%` to guarantee no widths change when we use a loading spinner or images are missing
                     D.TD({style: 'width: 33%'} ,[
                       // TODO: Ditch `expected-diff-img` as we have multiple images now
                       D.IMG({
