--- a/lib/index.jade
+++ b/lib/index.jade
@@ -41,12 +41,12 @@ html
     //- TODO: Consider magnifying glass zoom on images (e.g. like in ecommerce sites)
     //- TODO: Figure out how to make selection work, maybe normal GUI like Gemini but with jawbone effect for matching items
 
-    //- TODO: Next: Add image acceptance support
-    //- TODO: Next: Add non-click image matching
-    //- TODO: Next: Add image acceptance support for matched images
-    //- TODO: Next: Move to click image matching
-    //- TODO: Next: Add overlay support
-    //- TODO: Next: Add result update (i.e. pass/fail) if we still lack it
+    //- [x] TODO: Next: Add image acceptance support
+    //- [ ] TODO: Next: Add non-click image matching
+    //- [ ] TODO: Next: Add image acceptance support for matched images
+    //- [ ] TODO: Next: Move to click image matching
+    //- [ ] TODO: Next: Add overlay support
+    //- [ ] TODO: Next: Add result update (i.e. pass/fail) if we still lack it
 
     //- Define our initial render script
     //- TODO: Relocate into another file
