--- a/lib/index.jade
+++ b/lib/index.jade
@@ -45,7 +45,7 @@ html
     //- [ ] TODO: Next: Add non-click image matching
     //- [ ] TODO: Next: Add image acceptance support for matched images
     //- [ ] TODO: Next: Move to click image matching
-    //- [ ] TODO: Next: Add overlay support
+    //- [ ] TODO: Next: Add click/drag overlay support
     //- [ ] TODO: Next: Add result update (i.e. pass/fail) if we still lack it
 
     //- Define our initial render script
