Fixed up expand targets

--- a/lib/index.jade
+++ b/lib/index.jade
@@ -78,7 +78,7 @@ html
               // Row title
               D.A({
                 href: 'javascript:void 0;', 'data-toggle': 'collapse',
-                'data-target': '[data-id="' + imgSetId + '"]', 'aria-controls': imgSetId
+                'data-target': '[data-image-set="' + imgSetId + '"]', 'aria-controls': imgSetId
               }, imgSetHumanName),
 
               // Collapsable container for row
