--- a/lib/index.jade
+++ b/lib/index.jade
@@ -42,9 +42,9 @@ html
     //- TODO: Figure out how to make selection work, maybe normal GUI like Gemini but with jawbone effect for matching items
 
     //- [x] TODO: Next: Add image acceptance support
-    //- [ ] TODO: Next: Add non-click image matching
+    //- [ ] TODO: Next: Add automatic image matching
     //- [ ] TODO: Next: Add image acceptance support for matched images
-    //- [ ] TODO: Next: Move to click image matching
+    //- [ ] TODO: Next: Move to button triggered image matching
     //- [ ] TODO: Next: Add click/drag overlay support
     //- [ ] TODO: Next: Add result update (i.e. pass/fail) if we still lack it
 
